# kith

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  book.toml  clippy.toml  justfile
.claude/: CLAUDE.md  adversary.md  analyst.md  architect.md  implementer.md  integrator.md
.github/workflows/: ci.yml  release.yml
config/: minimal.toml  production.toml
crates/kith-acceptance/: Cargo.toml  features
crates/kith-acceptance/features/: commit-windows.feature  drift-detection.feature  inference-backend.feature  local-execution.feature  remote-execution.feature  state-and-retrieval.feature  tool-discovery.feature
crates/kith-acceptance/tests/: acceptance.rs
crates/kith-acceptance/tests/steps/: commit_windows.rs  drift.rs  inference_backend.rs  local_execution.rs  mesh_networking.rs  mod.rs  policy.rs  remote_execution.rs  state_retrieval.rs
crates/kith-common/: Cargo.toml
crates/kith-common/src/: config.rs  credential.rs  drift.rs  error.rs  event.rs  inference.rs  lib.rs  policy.rs  tool_registry.rs  types.rs
crates/kith-daemon/: Cargo.toml  build.rs
crates/kith-daemon/src/: audit.rs  commit.rs  containment.rs  drift.rs  exec.rs  lib.rs  observer.rs  policy.rs  service.rs
crates/kith-e2e/: Cargo.toml
crates/kith-e2e/src/: helpers.rs  lib.rs
crates/kith-e2e/tests/: broken_paths.rs  chaos.rs  containers.rs  drift_sync.rs  full_flow.rs  integration_wiring.rs  local_model.rs  model_swap.rs  pty_passthrough.rs  sync_exchange.rs
crates/kith-mesh/: Cargo.toml
crates/kith-mesh/src/: lib.rs  manager.rs  nostr_signaling.rs  peer.rs  signaling.rs  wg_backend.rs  wireguard.rs
crates/kith-shell/: Cargo.toml
crates/kith-shell/src/: agent.rs  classify.rs  context.rs  daemon_client.rs  lib.rs  mock_backend.rs  prompt.rs  pty.rs  tools.rs
crates/kith-shell/src/inference/: anthropic.rs  mod.rs  openai_compat.rs
crates/kith-state/: Cargo.toml
crates/kith-state/src/: api_embedding.rs  embedding.rs  hybrid.rs  lib.rs  retrieval.rs  vector_index.rs
crates/kith-sync/: Cargo.toml
crates/kith-sync/src/: lib.rs  sqlite_store.rs  store.rs
docs/: README.md  SUMMARY.md  design-conversation.md
docs/architecture/: containment.md  daemon-design.md  failure-modes.md  mesh-networking.md  security.md  shell-design.md  state-retrieval.md  system-architecture.md
docs/decisions/: ADR-001-sync-strategy.md  ADR-002-containment-model.md  ADR-003-signaling-protocol.md  ADR-004-inference-abstraction.md  ADR-005-vector-index.md  ADR-006-credential-model.md
docs/usage/: configuration.md  deployment.md  getting-started.md  model-support.md  native-tools.md
examples/: README.md
examples/config/: dev-local.toml  hosted-anthropic.toml  hosted-openai.toml  mesh-3node.toml  self-hosted-vllm.toml
examples/scripts/: 01-basic-usage.sh  02-remote-exec.sh  03-apply-commit-rollback.sh  04-retrieval.sh  05-mesh-setup.sh
proto/kith/daemon/v1/: daemon.proto
scripts/: set-version.sh
specs/: assumptions.md  domain-model.md  failure-modes.md  features  invariants.md  ubiquitous-language.md
specs/architecture/: dependency-graph.md  enforcement-map.md  error-taxonomy.md  module-map.md  tool-discovery.md
specs/architecture/data-models/: shared-types.md
specs/architecture/events/: event-catalog.md
specs/architecture/interfaces/: daemon-interfaces.md  inference-backend.md  mesh-interfaces.md  sync-interfaces.md
specs/cross-context/: interactions.md
specs/escalations/: adversary-arch-review-001.md  adversary-impl-review-001.md  adversary-sweep-001.md
specs/features/: commit-windows.feature  drift-detection.feature  local-execution.feature  mesh-networking.feature  policy-enforcement.feature
specs/fidelity/: INDEX.md
