[workspace]
resolver = "2"
members = [
    "crates/kith-common",
    "crates/kith-mesh",
    "crates/kith-daemon",
    "crates/kith-shell",
    "crates/kith-sync",
    "crates/kith-state",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/witlox/kith"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic = "0.13"
tonic-build = "0.13"
prost = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
