[package]
name = "kith-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared kernel for kith: types, traits, errors, config"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
dirs-next = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
