[package]
name = "kith-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Per-machine daemon: gRPC service, policy, drift, commit windows, audit"

[dependencies]
kith-common = { path = "../kith-common" }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
