[package]
name = "kith-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Per-machine daemon: gRPC service, policy, drift, commit windows, audit"

[dependencies]
kith-common = { path = "../kith-common" }
kith-sync = { path = "../kith-sync" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = "0.13"
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tokio-stream = "0.1"
hostname = "0.4"
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
