[package]

name = "kith-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
# Enable container-based tests (requires Docker)
containers = ["testcontainers"]
# Manual-only: real LLM test via Ollama container. Never in CI.
local-model = ["containers"]

[dependencies]
kith-common = { path = "../kith-common" }
kith-daemon = { path = "../kith-daemon" }
kith-shell = { path = "../kith-shell" }
kith-mesh = { path = "../kith-mesh" }
kith-sync = { path = "../kith-sync" }
kith-state = { path = "../kith-state" }
tokio = { workspace = true }
tonic = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
tempfile = "3"
futures = { workspace = true }
tokio-stream = "0.1"
testcontainers = { version = "0.23", optional = true }
reqwest = { version = "0.12", features = ["json"] }

[lints]
workspace = true
