[package]
name = "kith-mesh"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WireGuard tunnel management and Nostr signaling for kith mesh"

[dependencies]
kith-common = { path = "../kith-common" }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
