[package]
name = "kith-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal interface: input classification, LLM inference, tool dispatch"

[dependencies]
kith-common = { path = "../kith-common" }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
