[package]
name = "kith-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal interface: input classification, LLM inference, tool dispatch"

[dependencies]
kith-common = { path = "../kith-common" }
kith-daemon = { path = "../kith-daemon" }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
tokio-stream = "0.1"
hostname = "0.4"
dirs-next = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
