[package]

name = "kith-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Event store and CRDT replication for kith mesh sync"

[dependencies]
kith-common = { path = "../kith-common" }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled", "load_extension"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"

[lints]
workspace = true
